--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "brace": "^0.11.1",
     "logrocket": "^3.0.1",
     "logrocket-react": "^5.0.1",
+    "netlify-cli": "^12.10.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
